[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "atlassian-rag-exporter"
version = "2.0.0"
description = "Production-ready Confluence & Jira -> RAG corpus exporter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["atlassian", "confluence", "jira", "rag", "llm", "export"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31",
    "markdownify>=0.12",
    "beautifulsoup4>=4.12",
    "PyYAML>=6.0",
    "tenacity>=8.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.25",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
atlassian-rag-exporter = "atlassian_rag_exporter:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["atlassian_rag_exporter"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "W", "F", "I", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
