[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-rag-exporter"
version = "2.0.0"
description = "Export Atlassian Confluence/Jira to a structured RAG corpus"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["atlassian", "confluence", "jira", "rag", "llm", "export"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28",
    "markdownify>=0.11",
    "beautifulsoup4>=4.11",
    "PyYAML>=6.0",
    "tenacity>=8.0",
    "tqdm>=4.64",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
atlassian-rag-exporter = "atlassian_rag_exporter:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["atlassian_rag_exporter"]
omit = ["tests/*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict = false
